# matrix-harden-the-box

./: .env.example  .gitignore  Makefile  README.md
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  controller-buildconfig.yaml  controller-deployment.yaml  controller-imagestream.yaml  controller-pvc.yaml  controller-route.yaml  controller-sa.yaml  controller-service.yaml
controller/: pyproject.toml
controller/app/: config.py  configure_content.py  dependencies.py  main.py  models.py  persistence.py  scenarios.py  scenarios.yaml  state.py  ws.py
controller/app/routers/: admin.py  configure.py  contain.py  scores.py  teams.py
controller/app/services/: configure_scoring.py  contain_scoring.py  scoring.py
controller/tests/: test_api.py  test_configure_api.py  test_configure_scoring.py  test_persistence.py  test_scoring.py
docs/: ARCHITECTURE.md  CHANGELOG.md  PLAN.md
scripts/: deploy.sh  load-test.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
ui/src/components/: Achievements.tsx  AttackSimulation.tsx  DefenseStrength.tsx  DefenseToggle.tsx  Leaderboard.tsx  ProbeResult.tsx  ProgressBar.tsx  Timer.tsx
ui/src/components/__tests__/: Achievements.test.tsx
ui/src/components/configure/: CircuitBreakers.tsx  CrimeScene.tsx  (+3 more)
ui/src/constants/: scenarios.ts
ui/src/hooks/: useWebSocket.ts
ui/src/pages/: Admin.tsx  ConfigureExercise.tsx  ConfigureResults.tsx  Dashboard.tsx  HardenConfig.tsx  HarnessDemo.tsx  KataDemo.tsx  Login.tsx  Results.tsx  Scoreboard.tsx
(+34 files in other folders)
